More CSS media query fixes. Projects screen now looks good through all UI resizes. Headers of all screens changed so aligned to flex-start to begin with and then set to center when UI <950px

--- a/frontend/src/App/styles/components/_btns.scss
+++ b/frontend/src/App/styles/components/_btns.scss
@@ -47,7 +47,7 @@
 
   &__contact-form {
     align-self: flex-end;
-    margin-right: 2rem;
+    margin-right: 0rem;
     
     height: 3.5rem;
     width: 7rem;
@@ -65,6 +65,10 @@
     cursor: pointer;
     font-family: inherit ;
     transition: all 0.3s;
+    
+    @media (max-width: 950px) {
+      margin-right: 0;
+    }
   }
 
   &__modal {
