--- a/frontend/src/App/styles/layout/_containers.scss
+++ b/frontend/src/App/styles/layout/_containers.scss
@@ -69,7 +69,7 @@
             height: 200vh;
         }
         @media (max-width: 950px) {
-			height: 200%;
+			height: 100%;
 			@include flexCenterCenter($flex-direction: column);
         }
         @media (max-width: 500px) {
