--- a/frontend/src/App/styles/screens/_contact.scss
+++ b/frontend/src/App/styles/screens/_contact.scss
@@ -22,6 +22,11 @@
         background-image: $blue-gradient-2;
         -webkit-background-clip: text;
         color: transparent;
+        align-self: flex-start;
+
+        @media (max-width: 950px) {
+            align-self: center;
+        }
     }
 
     &__paragraph {
