--- a/frontend/src/App/styles/screens/_home.scss
+++ b/frontend/src/App/styles/screens/_home.scss
@@ -66,7 +66,8 @@
           font-family: 'Sacramento', cursive;
           transform: scale(3.0);
           height: 40rem;
-          text-shadow: 2px 4px 3px rgba(0,0,0,0.15)
+          text-shadow: 2px 4px 3px rgba(0,0,0,0.15);
+          opacity: 0;
         }
     }
 }
