--- a/frontend/src/App/styles/screens/_skills.scss
+++ b/frontend/src/App/styles/screens/_skills.scss
@@ -39,6 +39,11 @@
         -webkit-background-clip: text;
         color: transparent;
         letter-spacing: .2rem;
+        align-self: flex-start;
+
+        @media (max-width: 950px) {
+            align-self: center;
+        }
     }
 
     &__paragraph {
